right click on panel property fix press on space button on custom dropdown element in grid-cell opens dropdown shift+right / left on buttongroup in grid cell changes selected option arrow in dropdown select lists when there is no focus not shown

--- a/server/src/main/resources/web/bootstrap/bootstrap-ext.css
+++ b/server/src/main/resources/web/bootstrap/bootstrap-ext.css
@@ -347,3 +347,8 @@ div.selectArrow {
     margin: 0.25rem;
     line-height: var(--bs-body-line-height);
 }
+
+/* do not show arrow in dropdown select lists when there is no focus */
+select.form-select:not(:focus) {
+    background: none;
+}
